# volition

./: .gitignore  .release-please-manifest.json  .releaserc.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Casestudy.md  LICENSE  README.md  TODO_build_deployment.md  TODO_logging.md  TODO_state_location.md  TODO_testing.md  TODO_tool_safety.md  Volition.toml  api-questions.md  goal.txt  project-structure.txt  release-please-config.json  volition-promotion-plan.md
.github/workflows/: publish-crates.yml  release-please.yml  release-plz.yaml  release.yaml  release.yml
docs/: Architecture.md  overreach-conversation-log.txt  refactor-core-lib.md  refactor_conversation_backup.json  release_process.md  rust_specialization_plan.md  strategy-implemenation-planning-log.txt  strategy-plan.md  tips.md
kanban/todo/: cli_improvements.md  consider-rustyline.md  git-tool-user-confirmation.md  incorrect-usage-docs.md  refactor-agent-test-setup.md  refactor-core-api-trait.md
project/done/: strategies.md  volition-conversation-plan.md
project/in-progress/: mcp-implementation-plan.md  mcp-lsp-tools.md
project/todo/: error_handling.md  keep-all-sessions.md  lib-refactor-pr-future-work.md  namespace-env-vars.md  promotion-plan.md  refactor-agent-initialization.md  refactor-agent-move-mcp-mapping.md  refactor-agent-run-method.md  refactor-agent-tool-execution.md  refactor-cli-main-config.md  refactor-cli-main-history-handlers.md  refactor-cli-main-interactive-loop.md  refactor-cli-main-logging.md  refactor-cli-main-ui-helpers.md  refactor-cli-tool-definitions.md  strategies.md  too-many-requests.md
src/: api.rs  config.rs  constants.rs  main.rs  rendering.rs  utils.rs
src/models/: chat.rs  cli.rs  mod.rs  simulated_annealing.md  simulated_annealing.rs  tools.rs
src/strategies/: git_utils.rs  linear.rs  mod.rs  simulated_annealing.rs  simulated_annealing_plan.md
src/tools/: cargo.rs  code_search.rs  file.rs  filesystem.rs  git.rs  mod.rs  search.rs  shell.rs  submit_quality_score.rs  user_input.rs
src/utils/: git.rs  mod.rs
test-project/: warnings.txt
volition-agent-core/: Cargo.toml
volition-agent-core/src/: agent.rs  agent_tests.rs  api.rs  config.rs  errors.rs  lib.rs  utils.rs
volition-agent-core/src/mcp/: client.rs  session.rs
volition-agent-core/src/models/: chat.rs  tools.rs
volition-agent-core/src/providers/: gemini.rs  mod.rs  ollama.rs
volition-agent-core/src/strategies/: complete_task.rs  conversation.rs  mod.rs  plan_execute.rs
volition-agent-core/src/tools/: cargo.rs  fs.rs  git.rs  mod.rs  search.rs  shell.rs
volition-cli/: CHANGELOG.md  Cargo.toml
volition-cli/src/: history.rs  main.rs  rendering.rs
volition-cli/src/models/: cli.rs  mod.rs
volition-cli/src/tools/: cargo.rs  file.rs  filesystem.rs  git.rs  mod.rs  provider.rs  search.rs  shell.rs  user_input.rs
volition-core/: CHANGELOG.md  Cargo.toml
volition-core/docs/: adding_api_provider.md
volition-core/src/: agent.rs  agent_tests.rs  api.rs  config.rs  lib.rs
volition-core/src/api/: gemini.rs  mod.rs  ollama.rs  openai.rs  tests.rs
volition-core/src/mcp/: mod.rs  session.rs
volition-core/src/models/: chat.rs  tools.rs
volition-core/src/providers/: gemini.rs  mod.rs  ollama.rs  openai.rs
volition-core/src/strategies/: mod.rs  plan_revise_execute.rs
volition-core/src/tools/: fs.rs  search.rs
volition-filesystem-server/: CHANGELOG.md  Cargo.toml
volition-filesystem-server/src/: main.rs
volition-git-server/: CHANGELOG.md  Cargo.toml
volition-git-server/src/: main.rs
volition-search-server/: CHANGELOG.md  Cargo.toml
volition-search-server/src/: main.rs
volition-shell-server/: CHANGELOG.md  Cargo.toml
volition-shell-server/src/: main.rs
