[package]
name = "volition"
version = "0.1.0"
edition = "2021"
authors = ["Jesse B. Miller <jesse@jessebmiller.com>"]
description = "An AI-powered Linux CLI assistant"

[dependencies]
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
colored = "2.0"
dirs = "5.0"
dotenvy = "0.15"
ignore = "0.4" # Added for directory walking respecting .gitignore
lazy_static = "1.4" # For efficient loading of syntect themes/syntaxes
pulldown-cmark = "0.13.0" # Updated to match pulldown-cmark-to-cmark
regex = "1" # Added for parsing markdown code blocks
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syntect = { version = "5.2", features = ["parsing", "default-syntaxes", "default-themes", "regex-onig"] } # For syntax highlighting
tokio = { version = "1.29", features = ["full"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
url = "2.5"
termimad = "0.31.2"
pulldown-cmark-to-cmark = "21.0.0"
duct = "0.13"

# Add dev-dependencies section for test-only crates
[dev-dependencies]
tempfile = "3.6" # Added for filesystem tests
httpmock = "0.7" # Added for mocking HTTP requests
duct = "0.13"   # Keep duct, just remove non-existent feature
