[workspace.package]
authors = ["Jesse B. Miller <jesse@jessebmiller.com>"]
repository = "https://github.com/jessebmiller/volition"
license = "Apache-2.0"
readme = "README.md"
description = "An AI-powered software engineering assistant"
keywords = ["ai", "cli", "assistant", "rust", "llm", "vibecoding"]
categories = ["command-line-utilities", "development-tools"]

[workspace]
members = [
    "volition-cli",
    "volition-agent-core",
    "volition-filesystem-server",
    "volition-shell-server",
    "volition-git-server",
    "volition-search-server",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.3", features = ["derive"] }
colored = "2.0"
dirs = "5.0"
dotenvy = "0.15"
duct = "0.13"
lazy_static = "1.4"
pulldown-cmark = "0.13.0"
pulldown-cmark-to-cmark = "21.0.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syntect = { version = "5.2", features = ["parsing", "default-syntaxes", "default-themes", "regex-onig"] }
termimad = "0.31.2"
time = { version = "0.3", features = ["macros", "local-offset"] } # Added for CLI timestamp formatting
tokio = { version = "1.29", features = ["full"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
url = "2.5"
ignore = "0.4"
regex = "1"
rmcp = { version = "0.1", features = ["server"] }
git2 = "0.19"
tempfile = "3.6"
httpmock = "0.7"
