[package]
name = "volition-agent-core"
version = "0.1.0"
edition = "2021"
authors = ["Jesse B. Miller <jesse@jessebmiller.com>"]
description = "Core library for the Volition AI agent"

[lib]
name = "volition_agent_core"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
dotenvy = "0.15" # Added for environment variable configuration
ignore = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
httpmock = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true } # Added for agent tests
