[package]
name = "volition-agent-core"
version = "0.1.0"
edition = "2021"
authors = ["Jesse B. Miller <jesse@jessebmiller.com>"]
description = "Core library for the Volition AI agent"

[lib]
name = "volition_agent_core"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
dotenvy = { workspace = true } # Use workspace version
ignore = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1.0" # Added for AgentError - Keep specific version or move to workspace?
                  # Let's keep it specific for now.
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
# Inherit rmcp from workspace, specify needed features
rmcp = { workspace = true, features = ["client", "server", "transport-child-process"] }

[dev-dependencies]
httpmock = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true } # Added for agent tests
