[package]
name = "volition-agent-core"
version = "0.1.0"
edition = "2024"
authors = { workspace = true }
description = "Core library for the Volition AI agent"
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
keywords = ["ai", "library", "llm", "agent", "mcp"]
categories = ["development-tools"]

[lib]
name = "volition_agent_core"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
dotenvy = { workspace = true }
ignore = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1.0"
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
rmcp = { workspace = true, features = ["client", "server", "transport-child-process"] }
tokio-util = "0.7" # Added tokio-util

[dev-dependencies]
httpmock = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
