[package]
name = "volition-cli"
version = "0.1.0"
edition = "2021"
authors = { workspace = true }
description = "An AI-powered software engineering assistant (CLI frontend)"
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
keywords = ["ai", "cli", "assistant", "rust", "llm", "vibecoding"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "volition"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }
duct = { workspace = true }
ignore = { workspace = true }
lazy_static = { workspace = true }
pulldown-cmark = { workspace = true }
pulldown-cmark-to-cmark = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
syntect = { workspace = true }
termimad = { workspace = true }
time = { workspace = true, features = ["macros", "local-offset"] }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
# Enable env-filter and time features for tracing-subscriber
tracing-subscriber = { workspace = true, features = ["env-filter", "time", "local-time", "registry", "fmt"] } # Added registry and fmt features
tracing-appender = "0.2" # Added for file logging
uuid = { workspace = true }
url = { workspace = true }

# Add path dependency to the core library
volition-agent-core = { version = "0.1.0", path = "../volition-agent-core" }

[dev-dependencies]
tempfile = { workspace = true }
httpmock = { workspace = true }
