[package]
name = "volition-cli"
version = "0.2.4"
edition = "2024" # Assuming 2021 or later
authors = { workspace = true }
description = "An AI-powered software engineering assistant (CLI frontend)"
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
keywords = ["ai", "cli", "assistant", "rust", "llm"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "volition"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }
duct = { workspace = true }
ignore = { workspace = true }
lazy_static = { workspace = true }
pulldown-cmark = { workspace = true }
pulldown-cmark-to-cmark = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] } # Ensure derive feature is enabled
serde_json = { workspace = true }
syntect = { workspace = true }
termimad = { workspace = true }
time = { workspace = true, features = ["macros", "local-offset"] }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
# Enable env-filter and time features for tracing-subscriber
tracing-subscriber = { workspace = true, features = ["env-filter", "time", "local-time", "registry", "fmt"] } # Added registry and fmt features
tracing-appender = "0.2" # Added for file logging
uuid = { version = "1.6", features = ["v4", "serde"] } # Add uuid with features
chrono = { version = "0.4", features = ["serde"] } # Add chrono with serde feature
url = { workspace = true }
indicatif = "0.17" # Added for spinners
rustyline = { version = "14.0", features = ["derive"] } # Added rustyline
dialoguer = { version = "0.11", features = ["fuzzy-select"] } # Added dialoguer

# Add path dependency to the core library
# Ensure version is appropriate or use workspace inheritance if set up for path deps
volition-core = { version = "0.1.3", path = "../volition-core" }


[dev-dependencies]
tempfile = { workspace = true }
httpmock = { workspace = true }
