[package]
name = "volition-filesystem-server"
version = "0.1.0"
edition = "2024"
authors = { workspace = true }
description = "Filesystem server for the Volition AI assistant using MCP protocol"
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
keywords = ["ai", "mcp", "filesystem", "server"]
categories = ["development-tools"]

[dependencies]
anyhow = { workspace = true }
# Inherit rmcp from workspace, specify needed features
rmcp = { workspace = true, features = ["server", "transport-io"] } # Added transport-io
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7" # Added tokio-util
async-trait = { workspace = true } # Added async-trait
