[package]
name = "volition-git-server"
version = "0.1.1"
edition = "2024"
authors = { workspace = true }
description = "Git server for the Volition AI assistant using MCP protocol"
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
keywords = ["ai", "mcp", "git", "server"]
categories = ["development-tools"]

[dependencies]
anyhow = { workspace = true }
rmcp = { workspace = true, features = ["server", "transport-io"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
async-trait = { workspace = true }
git2 = "0.19" # Added git2 crate
clap = { version = "4", features = ["derive"] } # Added clap
