[package]
name = "volition-search-server"
version = "0.1.1"
edition = "2024"
authors = { workspace = true }
description = "Search server for the Volition AI assistant using MCP protocol"
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
keywords = ["ai", "mcp", "search", "server"]
categories = ["development-tools"]

[dependencies]
anyhow = { workspace = true }
rmcp = { workspace = true, features = ["server", "transport-io"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
async-trait = { workspace = true }

# Search dependencies
ignore = { workspace = true }
regex = { workspace = true }
