[package]
name = "volition-shell-server"
version = "0.1.1"
edition = "2024"
authors = { workspace = true }
description = "Shell server for the Volition AI assistant using MCP protocol"
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
keywords = ["ai", "mcp", "shell", "server"]
categories = ["development-tools"]

[dependencies]
anyhow = { workspace = true }
rmcp = { workspace = true, features = ["server", "transport-io"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
async-trait = { workspace = true } # Might need this if using async fn in trait impl later
duct = { workspace = true } # For running shell commands
